--- a/src/main/webapp/api_details.html
+++ b/src/main/webapp/api_details.html
@@ -241,6 +241,8 @@ ul.menu-items li {
 			<ul class="menu-items">
 				<li class="list-item" onClick="showContent(login, this)">Login</li>
 				<li class="list-item" onClick="showContent(save_candidate_profile, this)">Save Candidate Profile</li>
+				<li class="list-item" onClick="showContent(build_candidate_resume, this)">Build Candidate Resume</li>
+				<li class="list-item" onClick="showContent(get_resume_details, this)">Get Resume Details</li>
 			</ul>
 		</div>
 		<div class="content-section">
@@ -301,7 +303,6 @@ ul.menu-items li {
 					</div>
 				</div>
 			</div>
-			
 			
 			<!-- ==================================== Save Candidate Profile  ====================================-->
 			<div class="content-section-body" id="save_candidate_profile">
@@ -378,6 +379,248 @@ ul.menu-items li {
 				</div>
 			</div>
 			
+			<!-- ==================================== Build Candidate Resume  ====================================-->
+			<div class="content-section-body" id="build_candidate_resume">
+				<div class="description-of-service">This service is to build the candidate resume.</div>
+				<div class="method-content-type-url-table">
+					<div class="method-content-type-url-table-content">
+						<div class="method table-header">Method</div>
+						<div class="content-type table-header">Content Type</div>
+						<div class="url table-header">URL</div>
+					</div>
+					<div class="method-content-type-url-table-content">
+						<div class="method body">POST</div>
+						<div class="content-type body">application/json</div>
+						<div class="url body">/api/resume/build/candidate</div>
+					</div>
+				</div>
+
+				<div class="request-object">
+					<div class="request-object-header">Request Object</div>
+					<div class="request-object-body">
+						<pre>
+		                  {
+						"workExperiences" : [{
+								"jobTitle": "Software Engineer",
+								"company": "Aqua SS",
+								"city": "Hyderabad",
+								"timePeriodFrom": "Jan 2017",
+								"timePeriodTo": "Dec 2019",
+								"description": "This is the description of the workexperience"
+						}],
+						"educations" : [{
+								"degree": "Degree Bsc",
+								"collegeOrUniversity": "Andhra University",
+								"fieldOfStudy": "Computer Science",
+								"city": "Visakhapatnam",
+								"timePeriodFrom": "Jan 2014",
+								"timePeriodTo": "Mar 2016"
+						}],
+						"skills" : [{
+								"skill": "Java",
+								"experience": "4 Years 3 Months"
+						}],
+						"awardsOrAchievements" : [{
+								"title": "Best Employee",
+								"dateAwarded": "Jan 2018",
+								"description": "Received the best employee award for the month of Jan 2018"
+						}],
+						"certificationsAndLincenses" : [{
+								"title": "SCJP Certification",
+								"description": "Oracle certified Java Professional certification",
+								"timePeriodFrom": "Jan 2018",
+								"timePeriodTo": "Jan 2018"
+						}],
+						"nonProfitStudentOrganizations" : [{
+								"title": "ASWA Organization",
+								"description": "ASWA Organization",
+								"timePeriodFrom": "Jan 2018",
+								"timePeriodTo": "Jan 2018"
+						}],
+						"projectsOrPapersPresented" : [{
+								"title": "Project A",
+								"url": "http://www.projecta.com",
+								"description": "This is Project A description",
+								"additionalInformation": "This is additional information for the Project A",
+								"datePublished": "Mar 2018"
+						}],
+						"onlineProfileDetails" : {
+								"linkAddress": "http://www.myprofile.com"
+						},
+						"militaryServiceDetails" : {
+								"serviceCountry": "India",
+								"branch": "Jammu",
+								"rank": "ABCD Rank",
+								"commendations": "Having multiple commendments",
+								"timePeriodFrom": "Jan 2015",
+								"timePeriodTo": "Mar 2016",
+								"description": "This is the description of the military service description"
+						}
+					}
+		                </pre>
+					</div>
+				</div>
+
+				<div class="request-object">
+					<div class="request-object-header">Response Object</div>
+					<div class="request-object-body">
+						<pre>
+		                  {
+						    "message": "Candidate Resume build successfully",
+						    "responsePayload": null
+						}
+		                </pre>
+					</div>
+				</div>
+				<div class="method-content-type-url-table">
+					<div class="method-content-type-url-table-content">
+						<div class="method table-header">Field</div>
+						<div class="content-type table-header">Is Mandatory</div>
+						<div class="url table-header">Max Length</div>
+					</div>
+					<div class="method-content-type-url-table-content">
+						<div class="method body">name</div>
+						<div class="content-type body">true</div>
+						<div class="url body">150</div>
+					</div>
+					<div class="method-content-type-url-table-content">
+						<div class="method body">lastName</div>
+						<div class="content-type body">true</div>
+						<div class="url body">150</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- ==================================== Build Candidate Resume  ====================================-->
+			<div class="content-section-body" id="get_resume_details">
+				<div class="description-of-service">This service is to getd the candidate resume details.</div>
+				<div class="method-content-type-url-table">
+					<div class="method-content-type-url-table-content">
+						<div class="method table-header">Method</div>
+						<div class="content-type table-header">Content Type</div>
+						<div class="url table-header">URL</div>
+					</div>
+					<div class="method-content-type-url-table-content">
+						<div class="method body">GET</div>
+						<div class="content-type body">application/json</div>
+						<div class="url body">/api/resume/get/details</div>
+					</div>
+				</div>
+
+
+				<div class="request-object">
+					<div class="request-object-header">Response Object</div>
+					<div class="request-object-body">
+						<pre>
+		                  {
+						    "message": "Resume Details",
+						    "responsePayload": {
+						        "message": null,
+						        "authCode": "bEm5gZu8aHd61580881811474",
+						        "email": "jayaprakash.manne@gmail.com",
+						        "name": "Jaya Prakash",
+						        "lastName": "Manne",
+						        "headLine": "Senior Software Engieneer",
+						        "objective": "To be a good Software Professional",
+						        "city": "Hyderabad",
+						        "state": "Telangana",
+						        "pinCode": "500085",
+						        "country": "India",
+						        "phoneNumber": "9000143256",
+						        "relocate": "1",
+						        "resumeCode": "5f840a1547db11eaa0ee7157fd62c326",
+						        "workExperiences": [
+						            {
+						                "workExperienceDetailsId": 1,
+						                "jobTitle": "Software Engineer",
+						                "company": "Aqua SS",
+						                "city": "Hyderabad",
+						                "description": "This is the description of the workexperience",
+						                "timePeriodFrom": "Jan 2017",
+						                "timePeriodTo": "Dec 2019"
+						            }
+						        ],
+						        "educations": [
+						            {
+						                "educationDetailsId": 1,
+						                "degree": "Degree Bsc",
+						                "collegeOrUniversity": "Andhra University",
+						                "fieldOfStudy": "Computer Science",
+						                "city": "Visakhapatnam",
+						                "timePeriodFrom": "Jan 2014",
+						                "timePeriodTo": "Mar 2016"
+						            }
+						        ],
+						        "skills": [
+						            {
+						                "skillDetailsId": 1,
+						                "skill": "Java",
+						                "experience": "4 Years 3 Months"
+						            }
+						        ],
+						        "awardsOrAchievements": [
+						            {
+						                "awardsOrAchievementsDetailsId": 1,
+						                "title": "Best Employee",
+						                "dateAwarded": "Jan 2018",
+						                "description": "Received the best employee award for the month of Jan 2018"
+						            }
+						        ],
+						        "certificationsAndLincenses": [
+						            {
+						                "certificationsAndLicensesDetailsId": 1,
+						                "title": "SCJP Certification",
+						                "description": "Oracle certified Java Professional certification",
+						                "timePeriodFrom": "Jan 2018",
+						                "timePeriodTo": "Jan 2018"
+						            }
+						        ],
+						        "nonProfitStudentOrganizations": [
+						            {
+						                "nonProfitStudentOrganizationsDetailsId": 1,
+						                "title": "ASWA Organization",
+						                "description": "ASWA Organization",
+						                "timePeriodFrom": "Jan 2018",
+						                "timePeriodTo": "Jan 2018"
+						            }
+						        ],
+						        "projectsOrPapersPresented": [
+						            {
+						                "projectsOrPapersPresentedDetailsId": 1,
+						                "title": "Project A",
+						                "url": "http://www.projecta.com",
+						                "description": "This is Project A description",
+						                "additionalInformation": "This is additional information for the Project A",
+						                "datePublished": "Mar 2018"
+						            }
+						        ],
+						        "onlineProfileDetails": {
+						            "onlineProfileDetailsId": 1,
+						            "linkAddress": "http://www.myprofile.com"
+						        },
+						        "militaryServiceDetails": {
+						            "militaryServiceDetailsId": 1,
+						            "serviceCountry": "India",
+						            "branch": "Jammu",
+						            "rank": "ABCD Rank",
+						            "description": "This is the description of the military service description",
+						            "commendations": "Having multiple commendments",
+						            "timePeriodFrom": "Jan 2015",
+						            "timePeriodTo": "Mar 2016"
+						        }
+						    }
+						}
+		                </pre>
+					</div>
+				</div>
+			</div>
+
+
+
+
+
+
+
 
 		</div>
 	</div>
